--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Profil Saya</title>
+  <title>Latihan komando tempur TIK</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img src="foto-profil.jpg" alt="Foto profil saya">
+  <h1>FAREL INDRA FEBRIHANSEN</h1>
+  <P>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</P>
+  <a
+  href="https://www.instagram.com/insfhnsn?igsh=MTZsYzBoY3l6anNxcg=="
+    
   <!-- Konten yang terlihat oleh pengunjung akan ada disini-->
 </body>
 </html>
