--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="foto-profil.jpg" alt="Foto profil saya">
-  <h1>FAREL INDRA FEBRIHANSEN</h1>
-  <P>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</P>
-  <a
-  href="https://www.instagram.com/insfhnsn?igsh=MTZsYzBoY3l6anNxcg=="
-    
+   <div class="kartu-profil">
+    <img src="foto-profil.jpg" alt="Foto profil saya">
+    <h1>FAREL INDRA FEBRIHANSEN</h1>
+    <P>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</P>
+    <a href=<"https://www.instagram.com/insfhnsn?igsh=MTZsYzBoY3l6anNxcg==">Kunjungi Instagram Saya</a>
+   </div>
   <!-- Konten yang terlihat oleh pengunjung akan ada disini-->
 </body>
 </html>
