--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Latihan komando tempur TIK</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Latihan komando tempur TIK</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="kartu-profil">
-    <img src="foto-profil.jpg" alt="Foto profil saya">
-    <h1>FAREL INDRA FEBRIHANSEN</h1>
-    <P>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</P>
-    <a href=<"https://www.instagram.com/insfhnsn?igsh=MTZsYzBoY3l6anNxcg==">Kunjungi Instagram Saya</a>
-   </div>
-  <!-- Konten yang terlihat oleh pengunjung akan ada disini-->
+    <div class="kartu-profil">
+        <img src="foto-profil.jpg" alt="Foto profil saya">
+        <h1>FAREL INDRA FEBRIANSEN</h1>
+        <p>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</p>
+        <a href="https://www.instagram.com/inshnsrn?igsh=MTIzYzBoY3l6anNxcg==">
+            Kunjungi Instagram Saya
+        </a>
+    </div>
+    <!-- Konten yang terlihat oleh pengunjung akan ada disini -->
 </body>
 </html>
