--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <div class="kartu-profil">
         <img src="foto-profil.jpg" alt="Foto profil saya">
-        <h1>FAREL INDRA FEBRIANSEN</h1>
+        <h1>FAREL INDRA FEBRIHANSEN</h1>
         <p>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</p>
         <a href="https://www.instagram.com/inshnsrn?igsh=MTIzYzBoY3l6anNxcg==">
-            Kunjungi Instagram Saya
+            Kunjung Ono IG ku Bolo
         </a>
     </div>
     <!-- Konten yang terlihat oleh pengunjung akan ada disini -->
