--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1>FAREL INDRA FEBRIHANSEN</h1>
         <p>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</p>
         <a href="https://www.instagram.com/inshnsrn?igsh=MTIzYzBoY3l6anNxcg==">
-            Kunjung Ono IG ku Bolo
-        </a>
+            Kunjung Ono IG ku Bolo </a>
+        <button id="sapaButton">Sapa Saya!</button>
     </div>
     <!-- Konten yang terlihat oleh pengunjung akan ada disini -->
 </body>
