--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>Siswa yang mencoba teknologi dan desain. Benvenuti nel mio primo sito web!</p>
         <a href="https://www.instagram.com/inshnsrn?igsh=MTIzYzBoY3l6anNxcg==">
             Kunjung Ono IG ku Bolo </a>
-        <button id="sapaButton">Sapa Saya!</button>
+        <button id="sapaButton">Senggol en aku!</button>
     </div>
     <!-- Konten yang terlihat oleh pengunjung akan ada disini -->
 </body>
