--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             Kunjung Ono IG ku Bolo </a>
         <button id="sapaButton">Senggol en aku!</button>
     </div>
-    <!-- Konten yang terlihat oleh pengunjung akan ada disini -->
+    <script src="script.js"></script>
+<!-- Konten yang terlihat oleh pengunjung akan ada disini -->
 </body>
 </html>
